force-app/main/default/objects/Coop_Request__c/Coop_Request__c.object-meta.xml
<CustomObject>
    <description>Distributor Coop Requests for DIRECTV &amp; AT&amp;T</description>
    <label>Distributor Coop Request</label>
    <nameField>
        <label>Coop Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor Coop Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>