force-app/main/default/objects/Coop_Request__c/fields/ACB_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>ACB_Claim_Number__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pure</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>SYD</fullName>
            </value>
            <value>
                <fullName>Other Dealer Service</fullName>
            </value>
            <value>
                <fullName>National Retail Reimbursement</fullName>
                <label>National Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>