force-app/main/default/objects/Coop_Request__c/fields/Allocation_Source__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Source__c</fullName>
    <description>Source of COOP Fund Allocations</description>
    <label>Allocation Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ViaSat Distributor Coop</fullName>
            </value>
            <value>
                <fullName>MSA Coop Request</fullName>
                <label>MDP Coop Request</label>
            </value>
            <value>
                <fullName>National Retailer Coop Request</fullName>
                <label>Marketing Fee</label>
            </value>
            <value>
                <fullName>Marketing Fee Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>