force-app/main/default/objects/Coop_Request__c/fields/Amount_of_Co_op_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Co_op_Requested__c</fullName>
    <description>Amount of Distributor Co-op Requested for Dealer</description>
    <label>Amount of Co-op Requested</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>