force-app/main/default/objects/Coop_Request__c/fields/Axapta__c.field-meta.xml
<CustomField>
    <fullName>Axapta__c</fullName>
    <label>Axapta #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>