force-app/main/default/objects/Coop_Request__c/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <description>Date Campaign is scheduled to End</description>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>