force-app/main/default/objects/Coop_Request__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <description>Date the campaign is scheduled to start</description>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>