force-app/main/default/objects/Coop_Request__c/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <label>Reimbursement Claim Date</label>
    <type>Date</type>
</CustomField>