force-app/main/default/objects/Coop_Request__c/fields/Co_op_Scheduled_to_Roll_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Co_op_Scheduled_to_Roll_Current_Month__c</fullName>
    <formula>P10_Account_Number__r.Co_op_About_to_Expire_Current_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-op Scheduled to Roll - Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>