force-app/main/default/objects/Coop_Request__c/fields/Co_op_Status__c.field-meta.xml
<CustomField>
    <fullName>Co_op_Status__c</fullName>
    <label>Co-op Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved by Director</fullName>
            </value>
            <value>
                <fullName>Denied by Director</fullName>
            </value>
            <value>
                <fullName>Approved by Co-op Manager</fullName>
            </value>
            <value>
                <fullName>Denied by Co-op Manager</fullName>
            </value>
            <value>
                <fullName>Approved by Dealer</fullName>
            </value>
            <value>
                <fullName>Pending Claims</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>