force-app/main/default/objects/Coop_Request__c/fields/Current_Coop__c.field-meta.xml
<CustomField>
    <fullName>Current_Coop__c</fullName>
    <label>Current Coop %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>