force-app/main/default/objects/Coop_Request__c/fields/Date_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Date_Allocated__c</fullName>
    <description>The date the Co-op was allocated</description>
    <inlineHelpText>The date the Co-op was allocated</inlineHelpText>
    <label>Date Allocated</label>
    <type>Date</type>
</CustomField>