force-app/main/default/objects/Coop_Request__c/fields/Dealer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Distributor Coop Requests</relationshipLabel>
    <relationshipName>Distributor_Coop_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>