force-app/main/default/objects/Coop_Request__c/fields/Dealer_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contact_Email_Address__c</fullName>
    <label>Dealer Contact Email Address</label>
    <type>Email</type>
</CustomField>