force-app/main/default/objects/Coop_Request__c/fields/Dealer_s_Current_ACB_Balance__c.field-meta.xml
<CustomField>
    <fullName>Dealer_s_Current_ACB_Balance__c</fullName>
    <description>Current balance in ACB for the dealer</description>
    <label>Dealers Current Coop Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>