force-app/main/default/objects/Coop_Request__c/fields/Dealer_Store_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Store_End_Date__c</fullName>
    <label>Dealer Store End Date</label>
    <type>Date</type>
</CustomField>