force-app/main/default/objects/Coop_Request__c/fields/Debit_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Debit_Submitted_Date__c</fullName>
    <label>Debit Submitted Date</label>
    <type>Date</type>
</CustomField>