force-app/main/default/objects/Coop_Request__c/fields/Debit_Submitted_Status__c.field-meta.xml
<CustomField>
    <fullName>Debit_Submitted_Status__c</fullName>
    <label>Debit Submitted Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>