force-app/main/default/objects/Coop_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describe when, where and how this co-op advertising funds will be used.</description>
    <inlineHelpText>Describe when, where and how this co-op advertising funds will be used.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>