force-app/main/default/objects/Coop_Request__c/fields/Estimated_Additional_Activations__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Additional_Activations__c</fullName>
    <label>Estimated Additional Activations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>