force-app/main/default/objects/Coop_Request__c/fields/Estimated_Cost_Per_Sale__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Per_Sale__c</fullName>
    <formula>Total_Cost_of_Campaign__c / Estimated_Additional_Activations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost Per Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>