force-app/main/default/objects/Coop_Request__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date co-op is set to expire</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>