force-app/main/default/objects/Coop_Request__c/fields/External_Coop_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Coop_Request_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Coop Request ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>