force-app/main/default/objects/Coop_Request__c/fields/Fund_Allocation_Request__c.field-meta.xml
<CustomField>
    <fullName>Fund_Allocation_Request__c</fullName>
    <description>Request ID once allocation is completed</description>
    <label>Claim/Order #</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>