force-app/main/default/objects/Coop_Request__c/fields/If_Other_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Please_Specify__c</fullName>
    <label>If &quot;Other&quot;, Please Specify</label>
    <length>200</length>
    <type>Text</type>
</CustomField>