force-app/main/default/objects/Coop_Request__c/fields/Lease_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lease_Cost__c</fullName>
    <label>Lease Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>