force-app/main/default/objects/Coop_Request__c/fields/MDP_New_Dealer_Marketing_Funds__c.field-meta.xml
<CustomField>
    <fullName>MDP_New_Dealer_Marketing_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDP New Dealer Marketing Funds</label>
    <type>Checkbox</type>
</CustomField>