force-app/main/default/objects/Coop_Request__c/fields/Media_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Media_Vendor_Name__c</fullName>
    <label>Media Vendor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>