force-app/main/default/objects/Coop_Request__c/fields/National_Retail_Program__c.field-meta.xml
<CustomField>
    <fullName>National_Retail_Program__c</fullName>
    <label>National Retail Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>PerfectHome Solutions</fullName>
            </value>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
                <isActive>false</isActive>
                <label>DIRECTV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>