force-app/main/default/objects/Coop_Request__c/fields/P10_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>P10_Account_Number__c</fullName>
    <description>PerfectVision Account Number</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Coop Requests</relationshipLabel>
    <relationshipName>Coop_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>