force-app/main/default/objects/Coop_Request__c/fields/Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Amount__c</fullName>
    <formula>BLANKVALUE(Lease_Cost__c, 0) - BLANKVALUE(Total_Cost__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reimbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>