force-app/main/default/objects/Coop_Request__c/fields/Reimbursement_percentage__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_percentage__c</fullName>
    <label>Reimbursement %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>