force-app/main/default/objects/Coop_Request__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>