force-app/main/default/objects/Coop_Request__c/fields/Retail_Store__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Store Name</label>
    <referenceTo>POE_Retail_Store__c</referenceTo>
    <relationshipLabel>Distributor Coop Requests</relationshipLabel>
    <relationshipName>Distributor_Coop_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>