force-app/main/default/objects/Coop_Request__c/fields/Retail_Store_Address__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store_Address__c</fullName>
    <formula>Retail_Store__r.POE_Street_Address__c + &apos;, &apos; + 
Retail_Store__r.POE_City__c + &apos;, &apos; + 
Text(Retail_Store__r.POE_State__c)+ &apos;, &apos; + 
Retail_Store__r.POE_Zip_Code__c</formula>
    <label>Retail Store Address</label>
    <type>Text</type>
</CustomField>