force-app/main/default/objects/Coop_Request__c/fields/Shirt_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Cost__c</fullName>
    <label>Shirt Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>