force-app/main/default/objects/Coop_Request__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>