force-app/main/default/objects/Coop_Request__c/fields/Subscriber_Survivability_Rate__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Survivability_Rate__c</fullName>
    <label>Subscriber Survivability Rate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>