force-app/main/default/objects/Coop_Request__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>CASE(Allocation_Source__c,

&quot;National Retailer Coop Request&quot;, (BLANKVALUE(Lease_Cost__c, 0) + BLANKVALUE(Podium_Cost__c, 0) + BLANKVALUE(Shirt_Cost__c, 0)),

&quot;Marketing Fee Reimbursement&quot;, (BLANKVALUE(Lease_Cost__c, 0) - BLANKVALUE(Lease_Cost__c, 0) * BLANKVALUE(Reimbursement_percentage__c,0)),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>