force-app/main/default/objects/Coop_Request__c/fields/Total_Cost_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Campaign__c</fullName>
    <description>What is the total cost of this campaign?</description>
    <inlineHelpText>What is the total cost of this campaign?</inlineHelpText>
    <label>Total Cost of Campaign</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>