force-app/main/default/objects/Coop_Request__c/fields/Type_of_Marketing_Item__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Marketing_Item__c</fullName>
    <label>Type of Marketing Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Dealer Kit</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Event Material</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Promo Items/Apparel</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Newspaper/ Magazine</fullName>
                <label>Newspaper/Magazine</label>
            </value>
            <value>
                <fullName>Yard Signs</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Badge/Business Card</fullName>
            </value>
            <value>
                <fullName>Leads/Referral</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Digital Banner Ad</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Marketing Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>