force-app/main/default/objects/Coop_Request__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Auto Mail</fullName>
            </value>
            <value>
                <fullName>Lorex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SYD</fullName>
            </value>
            <value>
                <fullName>Trost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>