force-app/main/default/objects/Coop_Request__c/fields/Viasat_ASM__c.field-meta.xml
<CustomField>
    <fullName>Viasat_ASM__c</fullName>
    <label>Viasat ASM</label>
    <length>75</length>
    <type>Text</type>
</CustomField>