force-app/main/default/objects/Coop_Request__c/fields/Viasat_SI_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Viasat_SI_Create_Date__c</fullName>
    <label>Viasat SI Create Date</label>
    <type>Date</type>
</CustomField>