force-app/main/default/objects/Coop_Request__c/recordTypes/Coop_Request.recordType-meta.xml
<RecordType>
    <fullName>Coop_Request</fullName>
    <active>false</active>
    <description>Distributor Coop Request for DIRECTV / AT&amp;T Program Type</description>
    <label>MDP Coop Request</label>
</RecordType>