force-app/main/default/objects/Coop_Request__c/recordTypes/National_Retailer_Coop_Request.recordType-meta.xml
<RecordType>
    <fullName>National_Retailer_Coop_Request</fullName>
    <active>true</active>
    <label>National Retailer Coop Request</label>
</RecordType>