force-app/main/default/objects/Coop_Request__c/recordTypes/Viasat_Coop_Request.recordType-meta.xml
<RecordType>
    <fullName>Viasat_Coop_Request</fullName>
    <active>false</active>
    <description>Distributor Coop Request for Viasat Program Type</description>
    <label>Viasat Coop Request</label>
</RecordType>