force-app/main/default/objects/Coop_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Allocated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount_of_Co_op_Requested__c</columns>
    <columns>P10_Account_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>